Changes from jTDS 0.8.1
=========================

07/28/2004 - David Kilzer
 o Moved TdsCore.TDS42, TDS50, TDS70, TDS80, SQLSERVER and SYBASE constants
   to Driver class per suggestion by Mike Hutchinson.

07/27/2004 - David Kilzer
 o Renamed SharedNamedPipeTest to NamedPipeUnitTest to better reflect its
   usage.
 o Added protected getters and setters to SharedSocket so that the in, out,
   tdsVersion and serverType fields could be made private again.  Implemented
   use of getters and setters in SharedSocket and SharedNamedPipe.
 o Refactored SharedNamedPipe constructor into an instance() static factory
   method.  Allowed calculateBufferSize() method to be made non-static,
   and will allow for easier unit testing in the future.
 o Cleaned up javadoc: fixed spelling and removed unused @throws.
 o Fixed CallableStatementTest.testCallableRegisterOutParameter1() which was
   using the '==' operator on String objects.  Changed to use assertEquals()
   instead.  Cleaned up two other uses of '==' inside assert*() methods.

07/27/2004 - Brian Heineman
 o Corrected bug [998765] Exception with Sybase and metaData.getTables(); Added
   test to ensure this functionality continues to work in the future.

07/26/2004 - David Kilzer
 o Made SharedNamedPipe constructor package-private to match SharedSocket
   constructor.
 o Made TdsCore.SQLSERVER and TdsCore.SYBASE public.  Removed use of
   "magic" values.
 o Fixed default value of lobBuffer in AbstractDataSource.getReference().
   It was using "portNumber" instead of "lobBuffer" for its default.
 o Made TdsCore.TDS42, TDS50, TDS70, TDS80 constants public for use with
   testing.
 o Made TdsCore.MIN_PKT_SIZE public, and created TdsCore.MAX_PKT_SIZE and
   TdsCore.DEFAULT_MIN_PKT_SIZE_TDS70.  Removed used of "magic" values.
 o Wrote new SharedNamedPipeTest class for testing new
   SharedNamedPipe.calculateBufferSize() method.
 o Fixed bug in SharedNamedPipe that caused it to create a zero-length