@@ -4,6 +4,8 @@ Changes from jTDS 0.8.1
 07/28/2004 - David Kilzer
  o Moved TdsCore.TDS42, TDS50, TDS70, TDS80, SQLSERVER and SYBASE constants
    to Driver class per suggestion by Mike Hutchinson.
+ o Made TdsCore.DEFAULT_SQLSERVER_PORT and DEFAULT_SYBASE_PORT public.
+   Removed use of "magic" values in other classes.
 
 07/27/2004 - David Kilzer
  o Renamed SharedNamedPipeTest to NamedPipeUnitTest to better reflect its
